--- a/RuleWay.ProductApi.csproj
+++ b/RuleWay.ProductApi.csproj
@@ -7,8 +7,15 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="9.0.7" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="9.0.8" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="9.0.8" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.6.2" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\RuleWay.Business\RuleWay.Business.csproj" />
+    <ProjectReference Include="..\RuleWay.DataAccess\RuleWay.DataAccess.csproj" />
+    <ProjectReference Include="..\RuleWay.Domain\RuleWay.Domain.csproj" />
   </ItemGroup>
 
 </Project>
